# mocker

./: .gitignore  Cargo.toml
src/: main.rs
src/lib/: config.rs  error.rs  file_fmt.rs  http.rs  middleware.rs  mod.rs  request.rs  response.rs  router.rs  server.rs  store.rs  table.rs  value.rs  workspace.rs
src/lib/middlewares/: cors.rs  mod.rs
